[gd_scene load_steps=8 format=3 uid="uid://b5gmwo6tv8kvr"]

[ext_resource type="Script" uid="uid://dqonwgmjt1vu8" path="res://UI/level_selector_screen.gd" id="1_800je"]
[ext_resource type="Theme" uid="uid://xldifolqw1ae" path="res://Resources/Themes/MAINMENUTHEME.tres" id="1_f42y0"]
[ext_resource type="Shader" uid="uid://do1o7me4dck4j" path="res://Shaders/scroll.gdshader" id="2_4vkt7"]
[ext_resource type="PackedScene" uid="uid://bbmge1qvbt5le" path="res://UI/scene_transition.tscn" id="2_26ypn"]
[ext_resource type="Texture2D" uid="uid://bpm1nnycb0pr6" path="res://Resources/Background/Brown.png" id="3_0rt7k"]
[ext_resource type="Script" uid="uid://boi4288ln8xg5" path="res://UI/button_tween.gd" id="6_f42y0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f42y0"]
shader = ExtResource("2_4vkt7")
shader_parameter/speed = 0.5

[node name="Level_Selector_Screen" type="Control" node_paths=PackedStringArray("transit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_f42y0")
script = ExtResource("1_800je")
transit = NodePath("SceneTransition")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_f42y0")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0rt7k")
stretch_mode = 1

[node name="SceneTransition" parent="." instance=ExtResource("2_26ypn")]

[node name="Hbox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -275.0
offset_top = -42.5
offset_right = 275.0
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 50

[node name="Level_1_Button" type="Button" parent="Hbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level 1"
script = ExtResource("6_f42y0")

[node name="Level_2_Button" type="Button" parent="Hbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level 2"
script = ExtResource("6_f42y0")

[node name="Level_3_Button" type="Button" parent="Hbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Level 3"
script = ExtResource("6_f42y0")

[connection signal="pressed" from="Hbox/Level_1_Button" to="." method="_on_level_1_button_pressed"]
[connection signal="pressed" from="Hbox/Level_2_Button" to="." method="_on_level_2_button_pressed"]
[connection signal="pressed" from="Hbox/Level_3_Button" to="." method="_on_level_3_button_pressed"]
